zl/jl feat: make get method return Optional.empty()