@@ -10,12 +10,12 @@ public class AppContainer {
 
     private final Map<Class<?>, Provider> provider = new HashMap<>();
 
-    public <T> T get(Class<T> target) throws NoSuchElementException {
+    public <T> Optional<T> get(Class<T> target) throws NoSuchElementException {
         if (!provider.containsKey(target)) {
-            throw new NoSuchElementException("can not get target from container");
+            return Optional.empty();
         }
 
-        return (T) provider.get(target).get();
+        return Optional.of((T) provider.get(target).get());
     }
 
     public <T> void bind(Class<T> bindType, T instance) {
@@ -26,7 +26,7 @@ public class AppContainer {
         Constructor<?> injectionConstructor = getInjectedConstructor(bindTarget);
         provider.put(bindType, () -> {
                     try {
-                        Object[] dependencies = Arrays.stream(injectionConstructor.getParameters()).map(parameter -> get(parameter.getType())).toArray(Object[]::new);
+                        Object[] dependencies = Arrays.stream(injectionConstructor.getParameters()).map(parameter -> get(parameter.getType()).orElseThrow(() -> new NoSuchElementException("can not get target from container"))).toArray(Object[]::new);
                         return injectionConstructor.newInstance(dependencies);
                     } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
                         throw new RuntimeException(e);
@@ -37,7 +37,7 @@ public class AppContainer {
     }
 
     private static <S, T extends S> Constructor<?> getInjectedConstructor(Class<T> targetClass) {
-        List<Constructor<?>> injectConstructors = Arrays.stream(targetClass.getConstructors()).filter(it -> it.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
+        List<Constructor<?>> injectConstructors = Arrays.stream(targetClass.getConstructors()).filter(it -> it.isAnnotationPresent(Inject.class)).toList();
         if (injectConstructors.size() > 1) throw new IllegalConstructorException("multiple injection constructors");
         return injectConstructors.stream().findFirst().orElseGet(() -> {
             try {
